<?xml version="1.0"?>
<package format="2">
  <name>bms_driver</name>
  <version>1.0.0</version>
  <description>Daly BMS 배터리 모니터링 드라이버 (CAN 250K, ROS1 Noetic). /bms/state·/bms/soc 발행.</description>
  <maintainer email="matt@navifra.com">navifra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>can_interface</depend>
</package>
