<?xml version="1.0"?>
<package format="2">
  <name>motor_driver</name>
  <version>1.0.0</version>
  <description>CAN(CANopen/CiA402) 기반 Kinco 구동모터 2개 드라이버 (ROS1 Noetic). 표준 메시지 토픽으로 외부 제어 가능.</description>
  <maintainer email="matt@navifra.com">navifra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rospy</exec_depend>
</package>
